kubernetes/apps/latex/code-server/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: latex-code-server
spec:
  selector:
    app: latex-code-server
  ports:
    - name: http
      port: 80
      targetPort: http
